# armamagna

./: .gitignore  ArmaMagna.cpp  CMakeLists.txt  CMakePresets.json  CommandLineParser.h  PowerSet.h  README.md  SearchThread.cpp  SmartDictionary.cpp  SmartDictionary.h  StringNormalizer.cpp  StringNormalizer.h  WordSignature.cpp  WordSignature.h  anagrams.txt  armamagna  english-dictionary.txt  main.cpp  makefile
data/: .eng.txt.kate-swp  eng.txt
include/: ArmaMagna.h  Combinations.h  Dictionarium.h  PowerSet.h  SearchThread.h  StringNormalizer.h  WordSignature.h
src/: ArmaMagna.cpp  ArmaMagna.h  Combinations.cpp  CommandLineParser.cpp  Dictionarium.cpp  Dictionarium.h  PowerSet.cpp  PowerSet.h  SearchThread.cpp  SearchThread.h  StringNormalizer.cpp  ThreadPool.cpp  ThreadPool.h  WordSignature.cpp  main.cpp
